Typos and bad grammar, be gone!

--- a/index.html
+++ b/index.html
@@ -101,14 +101,14 @@
     <section id="promo" class="promo section offset-header">
         <div class="container text-center">
         <div style="text-align: center"><img src="assets/images/xosp_black.png" width="350" /></div>
-            <p class="intro">Keep it minimal keep it Xperia!</p>
+            <p class="intro">Keep it minimal. Keep it Xperia!</p>
             <div class="btns">
                 <a class="btn btn-cta-primary" href="https://basketbuild.com/devs/XOSP">Downloads on BasketBuild</a>
                 <a class="btn btn-cta-primary" href="https://github.com/XOSP-Project/android_vendor_xosp/blob/xosp-mm/README.mkdn" target="_blank">ChangeLog</a>
             </div>
             <ul class="meta list-inline">
             <i class="fa fa-paypal"></i>
-                        <li><a href="https://goo.gl/l9m5rr" target="_blank">Donate to the development!</a>
+                        <li><a href="https://goo.gl/l9m5rr" target="_blank">Donate to the development</a>
                         </li>
             <i class="fa fa-github"></i>
                         <li><a href="https://goo.gl/o5w9hI" target="_blank">XOSP Sources on GitHub</a>
@@ -131,8 +131,8 @@
 
     <section id="about" class="about section">
         <div class="container">
-            <h2 class="title text-center">What's XOSP?</h2>
-            <p class="intro text-center">XOSP basically which stands for the Xperia Open Source Project is project based on CM and the main idea is to create a custom minimal Xperia based ROM, by including the essential things which a user would use from a ROM.</p>
+            <h2 class="title text-center">What is XOSP?</h2>
+            <p class="intro text-center">XOSP stands for "Xperia Open Source Project". It is based on CyanogenMod. The main idea behind XOSP was to create a custom, minimal, Xperia based ROM, keeping essential things which a user would use, and not including unnecessary bloat in the ROM.</p>
             <div class="row">
                 <div class="item col-md-4 col-sm-6 col-xs-12">
                     <div class="icon-holder">
@@ -140,7 +140,7 @@
                     </div>
                     <div class="content">
                         <h3 class="sub-title">Android Marshmallow</h3>
-                        <p>We base our ROM always on the latest Android Version!</a>
+                        <p>We base our ROM on the latest Android Version!</a>
                         </p>
                     </div>
                 </div>
@@ -160,7 +160,7 @@
                     </div>
                     <div class="content">
                         <h3 class="sub-title">Community</h3>
-                        <p>Check out our community the place where to share opinions,stay up-to date with the latest news and upcoming features!  <a href="https://goo.gl/RZMYRL" target="_blank">Google+.</a>
+                        <p>Check out our community, the place to share opinions, and to stay up-to date with the latest news and upcoming features!  <a href="https://goo.gl/RZMYRL" target="_blank">Google+</a>
                         </p>
                     </div>
                 </div>
@@ -171,7 +171,7 @@
                     </div>
                     <div class="content">
                         <h3 class="sub-title">Lots of Features</h3>
-                        <p>Apart the Xperia ROM design and featured apps we also include one of the most famous <a href="#features">features</a> from other great ROMs </p>
+                        <p>Apart from Xperia's design and featured apps, we also include the best <a href="#features">features</a> from other great ROMs. </p>
                     </div>
                 </div>
                 <div class="item col-md-4 col-sm-6 col-xs-12">
@@ -189,7 +189,7 @@
                     </div>
                     <div class="content">
                         <h3 class="sub-title">Available for many devices</h3>
-                        <p>The ROM is available for many devices around and growing at the same time! If you also want to build for your device follow up this <a href="https://github.com/XOSP-Project/platform_manifest" target="_blank">link</a>
+                        <p>The ROM is available for many devices. The list of devices is growing all the time! If you also want to build for your device follow up this <a href="https://github.com/XOSP-Project/platform_manifest" target="_blank">link.</a>
                         </p>
                     </div>
                 </div>
@@ -199,7 +199,7 @@
                     </div>
                     <div class="content">
                         <h3 class="sub-title">XOSPApps</h3>
-                        <p>ROM provided with XOSPApps, XOSPApps zip includes all the most used Xperia Apps. Everything about it, right <a href="#xospapps">here</a>
+                        <p>With XOSP, you get XOSPApps. The XOSPApps zip includes all the most used Xperia Apps. Everything about it, right <a href="#xospapps">here.</a>
                         </p>
                     </div>
                 </div>
@@ -209,7 +209,7 @@
                     </div>
                     <div class="content">
                         <h3 class="sub-title">XOSPOTA</h3>
-                        <p>ROM provided with XOSPOTA which will allows you to download directly the latest builds for your phone!
+                        <p>You get XOSPOTA, which allows you to directly download the latest builds for your phone! No problems, easy updates.
                         </p>
                     </div>
                 </div>
@@ -219,7 +219,7 @@
                     </div>
                     <div class="content">
                         <h3 class="sub-title">Share it!</h3>
-                        <p>You like the ROM? Share it with your friends make them know about it and don't forget to join our community!</a>
+                        <p>Do you like the ROM? Share it with your friends, and let them know about it. And don't forget to join our community!</a>
                         </p>
                     </div>
                 </div>
@@ -286,7 +286,7 @@
     <section id="xospapps" class="xospapps section">
         <div class="container">
             <h2 class="title text-center">XOSPApps</h2>
-            <p class="intro text-center">XOSPApps basically includes all the necessary XperiaApps which a user will ever use, they're always updated in every release exactly as Google apps are updated. The package also includes the configuration script for the ViPER Audio Engine. Here are the apps included in XOSPApps zip package:</p>
+            <p class="intro text-center">XOSPApps includes all the necessary XperiaApps which a user will ever use, and they're always updated in every release exactly as Google apps are updated. The package also includes the configuration script for the ViPER Audio Engine. Here are the apps included in XOSPApps zip package:</p>
                 <div class="row text-center">
                     <ul class="feature-list list-unstyled">
                     
@@ -319,7 +319,7 @@
             <h2 class="title">Credits</h2>
             <ul class="feature-list list-unstyled">
 
-                <li><i class="fa fa-dot-circle-o "></i>CM for the base sources</li>
+                <li><i class="fa fa-dot-circle-o "></i>CyanogenMod for the base sources</li>
                 <li><i class="fa fa-dot-circle-o "></i>Sony and the Xperia community </li>
                 <li><i class="fa fa-dot-circle-o "></i>Malybru for the XOSP banner</li>
                 <li><i class="fa fa-dot-circle-o "></i>nightwalkerkg for the logo</li>
@@ -349,9 +349,10 @@
                     <li><i class="fa fa-dot-circle-o "></i> Reboot recovery</li>
                     <li><i class="fa fa-dot-circle-o "></i> Wipe data factory reset</li>
                     <li><i class="fa fa-dot-circle-o "></i> Flash latest XOSP Build</li>
+                    <li><i class="fa fa-dot-circle-o "></i> Flash the XOSPApps package</li>
                     <li><i class="fa fa-dot-circle-o "></i> Flash GApps</li>
                     <li><i class="fa fa-dot-circle-o "></i> Reboot</li>
-                    <li><i class="fa fa-dot-circle-o "></i> Note: As always, we are not responsable for any demage to your phone or soft bricks. You're flashing this on your own risk!</li>
+                    <li><i class="fa fa-dot-circle-o "></i> Note: As always, we are not responsable for any damage to your phone or soft bricks. You're flashing this at your own risk!</li>
         </div>
         </div>
     </section>
@@ -362,8 +363,8 @@
         <div class="container">
             <div class="contact-inner">
                 <h2 class="title  text-center">Want to Contribute?</h2>
-                <p class="intro  text-center">You can contribute in many ways in order to help the ROM development like Translate strings to various languages or cook the ROM for your device.If you're a designer you can make even more things like banners or even contribute to the ROM sources like creating new colors combinations for the System apps or even improvements for what already has been made. If you got a new feature and you think that it could be included in the ROM sources don't esitate to fork and make a pull request in our ROM sources</p>
-                <p class="intro  text-center">If you had experience with Android development and you want to be part of the team just PM Calin Neamtu on Hangouts by introducing yourself a bit and also by telling him what you do and what would you change to make the ROM better</p>
+                <p class="intro  text-center">You can contribute in many ways in order to help the ROM development, like by translating strings to various languages or by building the ROM for your device.If you're a designer, you can make other things like banners or even contribute to the ROM sources, like by creating new color combinations for the system apps or even improvements for what already has been made. If you have got a new feature and you think that it could be included in the ROM, don't hesitate to fork and make a pull request.</p>
+                <p class="intro  text-center">If you have an experience with Android development and you want to be part of the team just PM Călin Neamtu on Hangouts by introducing yourself a bit and also by telling him what you do and what would you change to make the ROM better.</p>
                 </p>
             </div>
         </div>
@@ -400,10 +401,7 @@
                         <div class="speech-bubble">
                             <h3 class="sub-title">Ritayan Chakraborty</h3>
                             <div class="source">
-                                <span class="title"><b>Developer</b></span>
-                                <br>
-                                <span class="body">Maintains: OTA </span>
-                                <br />
+                                <span class="title"><b>Developer - Delta</b></span>
                                 <a href="https://web.telegram.org/#/im?p=@out386"><i class="fa fa-paper-plane"></i></a>
                             </div>
                         </div>
