New Major update!
Signed-off-by: Calin <nilac8991@gmail.com>

--- a/screenshots.html
+++ b/screenshots.html
@@ -134,18 +134,19 @@
             <div class="contact-inner">
                 <div class="clearfix"></div>
                     <div class="info text-center">
-                        <ul class="social-icons list-inline">
+                    <ul class="social-icons list-inline">
                         <li class="last" title="Join our community!"><a href="https://goo.gl/RZMYRL" target="_blank"><i class="fa fa-google-plus"></i></a>
+                        <li class="last" title="Check out our official FB Page!"><a href="https://www.facebook.com/xosprom" target="_blank"><i class="fa fa-facebook"></i></a>
+                        </li>
+                        <li class="last" title="Our official Telegram channel!"><a href="https://telegram.me/xosp_channel" target="_blank"><i class="fa fa-paper-plane"></i></a>
                         </li>
                         <li class="last" title="Check out our sources!"><a href="https://goo.gl/o5w9hI" target="_blank"><i class="fa fa-github"></i></a>
                         </li>
                         <li class="last" title="Support the development with a donation!"><a href="https://goo.gl/l9m5rr" target="_blank"><i class="fa fa-paypal"></i></a>
                         </li>
-                        <li class="last" title="Our official Telegram channel!"><a href="https://telegram.me/xosp_channel" target="_blank"><i class="fa fa-paper-plane"></i></a>
-                        </li>
                         <li class="last" title="Mail us!"><a href="mailto: xperiaopensourceproject@gmail.com"><i class="fa fa-envelope"></i></a>
                         </li>
-                        </ul>
+                    </ul>
                     </div>
                 </div>
             </div>
